Add metrics to dashboard view.

--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -9,7 +9,7 @@
             </a>
         </div>
     </div>
-
+<gecko-metrics></gecko-metrics>
   <add-gecko-form></add-gecko-form>
 <gecko-table></gecko-table>
 <!--<egg-table></egg-table> -->
