--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -12,4 +12,5 @@
 @import "modules/_event-table.less";
 @import "modules/_gecko.less";
 @import "modules/_header.less";
+@import "modules/_metrics.less";
 
